--- a/package.json
+++ b/package.json
@@ -3,11 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "create-react-class": "^15.6.3",
-    "nuka-carousel": "^4.1.0",
+    "browser-router": "^0.2.0",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
-    "react-scripts": "1.1.4"
+    "react-newline-to-break": "^1.0.6",
+    "react-router-dom": "^4.2.2",
+    "react-scripts": "1.1.4",
+    "react-text-truncate": "^0.13.1"
   },
   "scripts": {
     "start": "react-scripts start",
